<resources>
    <string name="app_name">Old Sold</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="loginButton">Login</string>
    <string name="registerUser">New User? Register Now</string>
    <string name="registerButton">Register</string>
    <string name="logoutMenuOption">📤Logout</string>
    <string name="helpMenuOption">❓Help</string>
    <string name="write_a_comment">Write a comment...</string>


</resources>
